# 23BAI70654_Souradeep-Banerjee_FULL-STACK

Project_Work/: .gitignore  README.md  banner_preview.html  pyproject.toml
Project_Work/Frontend_polaris-iq/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
Project_Work/Frontend_polaris-iq/src/: index.css
Project_Work/Frontend_polaris-iq/src/components/layout/: Topbar.tsx
Project_Work/Frontend_polaris-iq/src/components/pages/: DataWorkspace.tsx  HomeDashboard.tsx  InsightsPage.tsx  PipelineMonitor.tsx  QueryStudio.tsx
Project_Work/Frontend_polaris-iq/src/components/ui/: ImageLightbox.tsx
Project_Work/Frontend_polaris-iq/src/services/: api.ts
Project_Work/Frontend_polaris-iq/src/types/: api.ts
Project_Work/polaris_iq/: __main__.py  main.py
Project_Work/polaris_iq/api/: server.py
Project_Work/polaris_iq/cli/: __init__.py  display.py  engine.py  main.py
Project_Work/polaris_iq/cli/commands/: __init__.py  ingest.py  query.py  serve.py  shell.py  tables.py
Project_Work/polaris_iq/core/: bootstrap.py  config.py
Project_Work/polaris_iq/data_layer/: precompute.py
Project_Work/polaris_iq/engine/: orchestrator.py  tool_agent.py
Project_Work/polaris_iq/execution/: cost_estimator.py  duckdb_executor.py  polars_executor.py  sklearn_executor.py  visualization_executor.py
Project_Work/polaris_iq/explanation/: explanation_engine.py
Project_Work/polaris_iq/llm/: model_loader.py
Project_Work/polaris_iq/planning/: context_builder.py  plan_generator.py  plan_memory.py  plan_validator.py
Project_Work/polaris_iq/tools/: tool_registry.py
(+32 files in other folders)
